--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,12 @@ header {
   position: fixed;
   width: 50px;
   height: 50px;
-  top: 65vh;
-  right: 0;
+  top: 60vh;
+  right: 20px;
   border-radius: 50px;
-  opacity: 0.7;
+  opacity: 0.5;
   font-size: 2em;
+}
+#scrollTop:hover {
+  opacity: 0.7;
 }
